<resources>
    <string name="app_name">Collectioner</string>
    <string name="dummyString">DummyText</string>
    <string name="collection_name">Collection Name</string>
    <string name="collection_description">Collection Description</string>
    <string name="add_collection">Add Collection</string>
    <string name="txt_validation_message">Enter %s</string>
    <string name="cupcake_ipsum">Cupcake ipsum dolor sit amet. Cheesecake sugar plum bear claw. Bonbon sesame snaps icing jelly pudding. Bonbon halvah gingerbread bonbon candy.</string>
    <string name="edit_collection">Save Collection</string>
    <string name="collection_added">Collection %s Added!</string>
    <string name="collection_modified">Collection %s Modified!</string>
<string name="title_activity_maps">Map</string>
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAuSvWZYvEq5qlzBRCEOo0DPtyJLe3L2q8
    </string>
    <!--Storage-->
    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>
    <!--Storage-->

    <!-- Login -->
    <string name="login_label">Login / Register</string>
    <string name="logout_label">Logout</string>
    <string name="title_emailpassword_activity">Email Login</string>
    <string name="title_googlesignin_activity">Google SignIn</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="signed_in">Signed In!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading…</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="disconnect">Disconnect</string>
    <string name="account_not_created">Could not create account.</string>
    <string name="account_created">Account successfully created. Now you can login!</string>

    <string name="label_google_sign_in">Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <!-- Strings related to login -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="sign_in">sign_in</string>
    <string name="desc_twitter_sign_in">twitter_sign_in</string>
    <string name="twitter_title_text">twitter_title</string>
    <string name="twitter_consumer_key">consumer key given by twitter app</string>
    <string name="twitter_consumer_secret">key generated by twitter app</string>
    <string name="twitter_status_fmt">status</string>
    <string name="desc_facebook_sign_in">facebooksignin</string>
    <string name="facebook_app_id">appid</string>
    <string name="facebook_title_text">title</string>
    <string name="facebook_status_fmt">facebook status</string>
    <string name="message_login">Please login to start you awesome collection!</string>
    <string name="msg_open_items">Searching Items...</string>
    <string name="msg_edit_collection">Collection: %s</string>
    <string name="msg_edit_item">Item: %s</string>
    <string name="msg_open_item_detail">Item %s Detail</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <!-- Login -->

</resources>
