<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.collection.AddCollectionActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name_col"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNameColl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/collection_name"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_desc_col"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtDescColl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/collection_description"
                android:inputType="textLongMessage" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:padding="8dp"
                android:id="@+id/btn_AddImgGallery"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:background="@color/accent"
                android:text="@string/gallery"
                android:textColor="@android:color/white" />

            <Button
                android:padding="8dp"
                android:id="@+id/btn_AddImgCamera"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:background="@color/accent"
                android:text="@string/camera"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_AddColl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/primary"
            android:text="@string/add_collection"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
